Add smoke test